--- a/src/main/webapp/seeStuLeave.html
+++ b/src/main/webapp/seeStuLeave.html
@@ -1,28 +1,63 @@
-<table id="demo" lay-filter="test"></table>
- 
-<script src="/layui/layui.js"></script>
+
 <script>
-layui.use('table', function(){
-  var table = layui.table;
-  
-  //第一个实例
-  table.render({
-    elem: '#demo'
-    ,height: 315
-    ,url: '/demo/table/user/' //数据接口
-    ,page: true //开启分页
-    ,cols: [[ //表头
-      {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'}
-      ,{field: 'username', title: '用户名', width:80}
-      ,{field: 'sex', title: '性别', width:80, sort: true}
-      ,{field: 'city', title: '城市', width:80} 
-      ,{field: 'sign', title: '签名', width: 177}
-      ,{field: 'experience', title: '积分', width: 80, sort: true}
-      ,{field: 'score', title: '评分', width: 80, sort: true}
-      ,{field: 'classify', title: '职业', width: 80}
-      ,{field: 'wealth', title: '财富', width: 135, sort: true}
-    ]]
-  });
-  
-});
+    $(function(){
+        console.log("渲染请假结果table");
+        $.ajax({
+            url:'/counselor/leaveResult',
+            type:"POST",
+            dataType:"json",
+            success:function(data) {
+                if (data.code == 200){
+                    var list = data.data;
+                    for (var i = 0; i < list.length ; i++){
+                        var row = $("#leavebody").clone();
+                        row.find("#stu_username").text(list[i].stu_username);
+                        row.find("#stu_name").text(list[i].stu_name);
+                        row.find("#class_name").text(list[i].class_name);
+                        row.find("#begintime").text(list[i].sl_begindate);
+                        row.find("#endtime").text(list[i].sl_enddate);
+                        row.find("#resion").text(list[i].sl_reason);
+                        if(list[i].sl_status == 2){
+                            row.find("#statue").append("批准");
+                        } else{
+                            row.find("#statue").append("未批准");
+                        }
+
+                        row.appendTo("#leavetable");
+                    }
+                }
+            },
+            error:function (data) {
+            }
+        });
+    });
+
 </script>
+<table class="layui-table" id="leavetable">
+    <colgroup>
+        <col width="150">
+        <col width="200">
+    </colgroup>
+    <thead>
+    <tr>
+        <th>学号</th>
+        <th>姓名</th>
+        <th>班级</th>
+        <th>请假开始日期</th>
+        <th>请假结束日期</th>
+        <th>请假原因</th>
+        <th>请假结果</th>
+    </tr>
+    </thead>
+    <tbody >
+    <tr id="leavebody">
+        <td id="stu_username"></td>
+        <td id="stu_name"></td>
+        <td id="class_name"></td>
+        <td id="begintime"></td>
+        <td id="endtime"></td>
+        <td id="resion"></td>
+        <td id="statue"></td>
+    </tr>
+    </tbody>
+</table>
